[package]
name = "katgpt-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared types and SIMD kernels for katgpt-rs and riir-engine"

[dependencies]
fastrand = "2"
rayon = "1.10"
log = "0.4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
half = "2"
papaya = { version = "0.2", optional = true }
rustfft = { version = "6", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["sparse_mlp", "plasma_path", "leo_all_goals", "dual_leo", "sigmoid_margin", "spectral_hierarchy", "dual_gram_pca", "roofline_cost"]
sparse_mlp = []
domain_latent = []
maxsim = []
dllm = []  # Discrete diffusion language model support (Plan 068)
coda_fusion = []  # CODA-inspired fused SIMD kernels — matmul+residual+rmsnorm+activation (Plan 103)
lt2_looped = []  # LT2 looped inference types — LoopMode, HybridPattern, SdpaOutputGate, ResidualGate (Plan 108)
tiled_attention = []  # Tiled online-softmax flash attention for CPU SIMD (Plan 115)
parallax_attn = ["tiled_attention"]  # Parallax parameterized local linear attention — R projection + covariance branch (Plan 135, Research 135) — opt-in
sr2am_configurator = []  # SR²AM Configurator Bandit — learned per-turn planning regulation (Plan 112, Research 076)
data_gate = []  # Task-level data gating for self-play training stability (Plan 111, Research 075)
questbench = []  # QuestBench underspecification scoring for modelless architecture (Plan 110, Research 008)
tf_loop = ["lt2_looped"]  # Training-free loop wrapper — ODE-refined sub-stepping (Plan 136)
plasma_path = []  # Bit-plane ternary SIMD matvec — multiplication-free CPU inference (Plan 148, Research 110)
peira_distill = []  # PEIRA inter-view regressor alignment (Plan 153)
dirichlet_energy = []  # Dirichlet Energy structural alignment diagnostic (Research 111, Plan 149)
leo_all_goals = []  # LEO all-goals Q-value framework — LeoHead + AllGoalsUpdate + sigmoid_bounded_q (Plan 155)
dual_leo = ["leo_all_goals"]  # Dual LEO teacher-student — + DualLeoMixer + AutocurriculumSampler (Plan 155)
spectral_hierarchy = []  # Spectral hierarchy diagnostic — eigenspace alignment, Haar wavelets, Cauchy interlacing (Plan 156)
sigmoid_margin = ["maxsim"]  # Sigmoid margin loss + retrieval margin diagnostic (Research 123, Plan 157)
dual_gram_pca = []  # Dual-Gram PCA routing for short-sequence calibration (Research R130, Plan 159)
roofline_cost = []  # Roofline cost model for GPU operator runtime prediction (Research R130, Plan 159)
moa_inference = []  # MoA Mixture of Activations — token-adaptive activation mixing (Research 126, Plan 158)
sia_feedback = ["sr2am_configurator"]  # FeedbackBandit — harness + weight co-evolution (Plan 163, Research 033)
hydra_budget = []  # Hydra-Aware Adaptive Layer Budget types (Research 148, Plan 165)
deltanet_inference = []  # DeltaNet GPU inference — hybrid DeltaNet/Attention decode (Plan 182, Research R036)
rim_slots = []  # RiM Reasoning Buffer Slots — fixed latent workspace for DDTree (Plan 172, Research 192)
wall_attention = []  # Wall Attention — diagonal forget gates replacing RoPE (Plan 173, Research Wall Attention)
mux_pruner = []  # MuxSpanPruner — vocabulary simplex pruning (Research 158, MUX)
mux_ddtree = ["mux_pruner"]  # MuxDdTree — superposition branch DDTree nodes (Research 158, MUX)
mux_bandit_width = []  # MuxBanditWidth — adaptive superposition width (Research 158, MUX)
mux_bfs = ["mux_ddtree"]  # MUX BFS — superposition-guided parallel tree search (Research 158)
mux_freeze_thaw = ["mux_pruner"]  # MUX Freeze/Thaw — persistent superposition patterns (Research 158)
comp_width = []  # Compositional DDTree partner-entropy width — continuous replacement for PEAK_DOMINANCE_RATIO (Plan 205, Research 181)
mux_demux = []  # MuxDemux Verifier — deterministic superposition recovery (Research 158, MUX)
and_or_dtree = []  # AND-OR DDTree — generic AND-OR tree for hierarchical goal decomposition (Plan 190, Research 170)
speculative_generator = []  # SpeculativeGenerator trait unification — generic generate+validate contract (Plan 193)
partial_scoring = []  # PartialScorer graduated reward for game episodes (Plan 191, Research 171)
problem_mutator = []  # ProblemMutator game config evolution (Plan 191, Research 171)
idea_divergence = ["partial_scoring"]  # IdeaDivergence strategic novelty filter (Plan 191, Research 171)
modal_spec = []  # ModalSpec drafter — LinOSS cell + Fourier basis speculative decoding (Plan 189 Phase 3, experimental)
collapse_aware_thinking = []  # Collapse-Aware Adaptive Thinking — CollapseDetector trait (Plan 212)
substrate_gate = []  # SubstrateGate passthrough — inference-time capability substrate routing (Plan 216)
belief_drafter = []  # NextLat Belief-State Speculative Drafter — entropy threshold config (Plan 217)
sense_composition = ["plasma_path", "domain_latent"]  # KG Latent Octree Sense Composition (Plan 221)
slod = ["spectral_hierarchy"]  # SLoD Spectral Level-of-Detail Pruner (Plan 235, GOAT G1-G6 all pass, default-ON)
rat_plus_bridge = []  # RAT+ Recurrence Bridge — modelless dilated inference via GDN2 state (Plan 225)
schema_centroid = ["dep:papaya"]  # Schema-Centroid Informed KG Embedding Initialization (Plan 237)
bake_precision = ["dep:papaya"]  # BAKE Precision-Gated Bayesian Embedding Update (Plan 236)
spectral_threat = ["sense_composition", "modal_spec"]  # LinOSS Modal Threat Prediction (Plan 241)
sense_lod = ["sense_composition", "slod"]  # Spectral NPC Perception Compression (Plan 240)
flow_field_nav = ["leo_all_goals", "dep:rustfft"]  # Fourier-smoothed flow fields for LEO crowd navigation (Plan 242, GOAT-gated)
spectral_pruner = ["dep:rustfft"]  # Spectral Irrep Pruner — spectral flatness-based speculative decoding pruning (Plan 246)
                                   # Inspired by arXiv:2606.02993: prunes tokens when logit spectrum shows competing modes.
                                   # Default-OFF until GOAT proof passes.

[[bench]]
name = "flow_field_bench"
harness = false
required-features = ["flow_field_nav"]

[[bench]]
name = "sense_lod"
harness = false
required-features = ["sense_lod"]
