[package]
name = "katgpt-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared types and SIMD kernels for katgpt-rs and riir-engine"

[dependencies]
fastrand = "2"
rayon = "1.10"
log = "0.4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
half = "2"
papaya = { version = "0.2", optional = true }
rustfft = { version = "6", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["sparse_mlp", "plasma_path", "leo_all_goals", "dual_leo", "sigmoid_margin", "spectral_hierarchy", "dual_gram_pca", "roofline_cost", "octree_ctc", "sector_projection", "action_bridge", "triggered_injection", "temporal_deriv"]  # triggered_injection DEFAULT-ON (Plan 278 GOAT G3) — sigmoid-thresholded inject/skip gate; temporal_deriv DEFAULT-ON (Plan 277 GOAT 4/4 fusions passed) — dual fast/slow EMA surprise signal
sparse_mlp = []
domain_latent = []
maxsim = []
dllm = []  # Discrete diffusion language model support (Plan 068)
coda_fusion = []  # CODA-inspired fused SIMD kernels — matmul+residual+rmsnorm+activation (Plan 103)
lt2_looped = []  # LT2 looped inference types — LoopMode, HybridPattern, SdpaOutputGate, ResidualGate (Plan 108)
tiled_attention = []  # Tiled online-softmax flash attention for CPU SIMD (Plan 115)
parallax_attn = ["tiled_attention"]  # Parallax parameterized local linear attention — R projection + covariance branch (Plan 135, Research 135) — opt-in
sr2am_configurator = []  # SR²AM Configurator Bandit — learned per-turn planning regulation (Plan 112, Research 076)
data_gate = []  # Task-level data gating for self-play training stability (Plan 111, Research 075)
cgsp = ["data_gate", "collapse_aware_thinking"]  # Curiosity-Guided Self-Play — modelless Solver/Conjecturer/Guide triad (Plan 274, Research 240). Self-contained: defines its own HintDeltaBandit/CollapseSignal/DifficultyFilter/BatchQualityGate traits. Moved from katgpt root to katgpt-core so riir-engine (Plan 299) can consume via katgpt-core/cgsp. Opt-in — keep off default until riir-ai Plan 299 Phase 3 GOAT gate validates on real game domains.
cgsp_dual_pool = ["cgsp"]  # Dual-Pool Reachable Memory Router — DecentMem distillation (Plan 282, Research 249, arXiv:2605.22721). Sigmoid-routed E/X pools with proactive non-trapping (Thm. 1) + O(log T) regret (Thm. 2). Extends single-pool CGSP (degenerate α=1). Opt-in until G1–G5 GOAT gate passes.
questbench = []  # QuestBench underspecification scoring for modelless architecture (Plan 110, Research 008)
tf_loop = ["lt2_looped"]  # Training-free loop wrapper — ODE-refined sub-stepping (Plan 136)
plasma_path = []  # Bit-plane ternary SIMD matvec — multiplication-free CPU inference (Plan 148, Research 110)
peira_distill = []  # PEIRA inter-view regressor alignment (Plan 153)
dirichlet_energy = []  # Dirichlet Energy structural alignment diagnostic (Research 111, Plan 149)
leo_all_goals = []  # LEO all-goals Q-value framework — LeoHead + AllGoalsUpdate + sigmoid_bounded_q (Plan 155)
dual_leo = ["leo_all_goals"]  # Dual LEO teacher-student — + DualLeoMixer + AutocurriculumSampler (Plan 155)
spectral_hierarchy = []  # Spectral hierarchy diagnostic — eigenspace alignment, Haar wavelets, Cauchy interlacing (Plan 156)
sigmoid_margin = ["maxsim"]  # Sigmoid margin loss + retrieval margin diagnostic (Research 123, Plan 157)
dual_gram_pca = []  # Dual-Gram PCA routing for short-sequence calibration (Research R130, Plan 159)
roofline_cost = []  # Roofline cost model for GPU operator runtime prediction (Research R130, Plan 159)
moa_inference = []  # MoA Mixture of Activations — token-adaptive activation mixing (Research 126, Plan 158)
sia_feedback = ["sr2am_configurator"]  # FeedbackBandit — harness + weight co-evolution (Plan 163, Research 033)
hydra_budget = []  # Hydra-Aware Adaptive Layer Budget types (Research 148, Plan 165)
deltanet_inference = []  # DeltaNet GPU inference — hybrid DeltaNet/Attention decode (Plan 182, Research R036)
rim_slots = []  # RiM Reasoning Buffer Slots — fixed latent workspace for DDTree (Plan 172, Research 192)
wall_attention = []  # Wall Attention — diagonal forget gates replacing RoPE (Plan 173, Research Wall Attention)
mux_pruner = []  # MuxSpanPruner — vocabulary simplex pruning (Research 158, MUX)
mux_ddtree = ["mux_pruner"]  # MuxDdTree — superposition branch DDTree nodes (Research 158, MUX)
mux_bandit_width = []  # MuxBanditWidth — adaptive superposition width (Research 158, MUX)
mux_bfs = ["mux_ddtree"]  # MUX BFS — superposition-guided parallel tree search (Research 158)
mux_freeze_thaw = ["mux_pruner"]  # MUX Freeze/Thaw — persistent superposition patterns (Research 158)
comp_width = []  # Compositional DDTree partner-entropy width — continuous replacement for PEAK_DOMINANCE_RATIO (Plan 205, Research 181)
mux_demux = []  # MuxDemux Verifier — deterministic superposition recovery (Research 158, MUX)
and_or_dtree = []  # AND-OR DDTree — generic AND-OR tree for hierarchical goal decomposition (Plan 190, Research 170)
speculative_generator = []  # SpeculativeGenerator trait unification — generic generate+validate contract (Plan 193)
partial_scoring = []  # PartialScorer graduated reward for game episodes (Plan 191, Research 171)
problem_mutator = []  # ProblemMutator game config evolution (Plan 191, Research 171)
idea_divergence = ["partial_scoring"]  # IdeaDivergence strategic novelty filter (Plan 191, Research 171)
modal_spec = []  # ModalSpec drafter — LinOSS cell + Fourier basis speculative decoding (Plan 189 Phase 3, experimental)
collapse_aware_thinking = []  # Collapse-Aware Adaptive Thinking — CollapseDetector trait (Plan 212)
substrate_gate = []  # SubstrateGate passthrough — inference-time capability substrate routing (Plan 216)
belief_drafter = []  # NextLat Belief-State Speculative Drafter — entropy threshold config (Plan 217)
sense_composition = ["plasma_path", "domain_latent"]  # KG Latent Octree Sense Composition (Plan 221)
slod = ["spectral_hierarchy"]  # SLoD Spectral Level-of-Detail Pruner (Plan 235, GOAT G1-G6 all pass, default-ON)
rat_plus_bridge = []  # RAT+ Recurrence Bridge — modelless dilated inference via GDN2 state (Plan 225)
schema_centroid = ["dep:papaya"]  # Schema-Centroid Informed KG Embedding Initialization (Plan 237)
bake_precision = ["dep:papaya"]  # BAKE Precision-Gated Bayesian Embedding Update (Plan 236)
spectral_threat = ["sense_composition", "modal_spec"]  # LinOSS Modal Threat Prediction (Plan 241)
sense_lod = ["sense_composition", "slod"]  # Spectral NPC Perception Compression (Plan 240)
flow_field_nav = ["leo_all_goals", "dep:rustfft"]  # Fourier-smoothed flow fields for LEO crowd navigation (Plan 242, GOAT-gated)
spectral_pruner = ["dep:rustfft"]  # Spectral Irrep Pruner — spectral flatness-based speculative decoding pruning (Plan 246, GOAT PASS +3.6% overhead, default-ON)
                                   # Inspired by arXiv:2606.02993: prunes tokens when logit spectrum shows competing modes.
octree_ctc = ["sense_composition"]  # OctreeCTC Reconstructive Memory Navigation (Plan 248, GOAT PASS, arXiv:2606.06036)
merkle_octree = ["sense_composition"]  # Merkle octree hierarchical commitment for SenseModule (Plan 221-M)
dec_operators = []  # Discrete Exterior Calculus — cell complexes, cochain fields, d/δ/Δ operators (Plan 251, Research 219, arXiv:2606.09806)
gpart_adapter = []  # GPart isometric partition adapter loading (Research 227, Plan 257)
gpart_pruning = ["gpart_adapter"]  # GPart top-k group pruning — zero out low-magnitude groups at apply time (Issue 008)
dendritic_gate = []  # DendriticGate NMDA-inspired adaptive branching types (Plan 260)
sector_projection = []  # Multi-sector spatial projection (Plan 262)
action_bridge = []  # Generic latent→raw action bridge (Plan 262)
dec_terrain_ai = ["dec_operators"]  # Dynamic DEC topology + terrain cochains for destructible terrain (Plan 261, GOAT-gated)
qgf = ["qgf_oracle", "qgf_projector"]  # Q-Guided Flow — test-time Q-gradient guidance parent (Plan 268, arXiv:2606.11087, GOAT-gated)
qgf_oracle = []  # QGradientOracle trait — drop-Jacobian critic gradient (Plan 268 F3)
qgf_projector = ["speculative_generator"]  # FirstOrderProjector — one-step Euler projection (Plan 268 F2)
qgf_drafter = ["qgf"]  # QGuidedDrafter — Q-gradient velocity bias during generation (Plan 268 F1). Enables `qgf` parent so `pub mod qgf` compiles.
qgf_adaptive = ["qgf_drafter"]  # VarianceAdaptiveGuidance — sigmoid-gated per-query 1/β (Plan 268 F4)
micro_belief = []  # MicroRecurrentBeliefState — per-entity recurrent state trait + attractor/leaky kernels + BLAKE3 snapshot (Plan 276, Research 242). Opt-in until G1.1–G1.5 GOAT gate passes.
bom_sampling = ["micro_belief", "simd_sigmoid"]  # BoMSampler — K-hypothesis single-pass belief sampling (Plan 281, Research 248). Auto-enables simd_sigmoid (G3 PASS: K=8 at 1.87× step, Issue 025). Opt-in until G2 arena gate passes (deferred to riir-ai).
simd_sigmoid = []  # SIMD-vectorized sigmoid→tanh→clamp fused pass for AttractorKernel::step() + BoMSampler::sample_k_states (Issues 024/025, M1). G3 PASS verified (K=8 at 1.87× step); auto-enabled by bom_sampling. Stays independently switchable for AttractorKernel::step() callers that don't use BoM (Issue 024 G1.4 step latency still fails on matvec, not sigmoid).
temporal_deriv = []  # Temporal Derivative Kernel — dual fast/slow EMA surprise signal (Plan 277, Research 243, arXiv:2606.08720). DEFAULT-ON after GOAT 4/4 fusions passed (G2 HLA companion, G3 δ-Mem gate, G4 collapse detector, G5 derivative curiosity).
faithfulness_probe = []  # FaithfulnessProbe — causal intervention diagnostic for injected memory (Plan 278, Research 244). Audit-cadence diagnostic — opt-in (diagnostic, audit cadence not every tick). Moved from katgpt root to katgpt-core so riir-engine (Plan 308) can consume via katgpt-core/faithfulness_probe.
triggered_injection = []  # TriggeredInjectionGate — sigmoid-thresholded inject/skip hot-path gate (Plan 278, Research 244). DEFAULT-ON after GOAT G3 passed (50% skips w/ 0.63% quality parity in saturated regime). Moved from katgpt root to katgpt-core so riir-engine (Plan 308) can consume via katgpt-core/triggered_injection.
self_advantage_gate = []  # Self-advantage recursion gate for HLA reconstruction (Plan 283 T5.1, Research 250, arxiv:2511.16886). Adds advantage-margin as the 4th early-stop criterion. The canonical AdvantageMarginGate primitive lives in the katgpt root crate (src/pruners/self_advantage.rs); this feature adds a minimal inline gate for the 6-element HLA activation vector (sigmoid-bounded, not logits — tuned separately).
recursion_logits = []  # RecursionLogits opt-in trait — pre/post recursion logits exposure for AdvantageMarginGate wrapping (Plan 283 T2.3, arxiv:2511.16886). Opt-in; non-recursing generators do not implement it.

[[bench]]
name = "flow_field_bench"
harness = false
required-features = ["flow_field_nav"]

[[bench]]
name = "sense_lod"
harness = false
required-features = ["sense_lod"]

[[bench]]
name = "reconstruction_bench"
harness = false
required-features = ["sense_composition"]

[[bench]]
name = "self_advantage_hla_bench"
harness = false
required-features = ["self_advantage_gate", "sense_composition"]

[[bench]]
name = "merkle_octree_bench"
harness = false
required-features = ["merkle_octree"]

[[bench]]
name = "npc_brain_bench"
harness = false
required-features = ["sense_composition"]

[[bench]]
name = "latent_physics_bench"
harness = false
required-features = ["sector_projection", "action_bridge"]

[[bench]]
name = "qgf_projector_bench"
harness = false
required-features = ["qgf"]

[[bench]]
name = "temporal_deriv_bench"
harness = false
required-features = ["temporal_deriv"]

[[bench]]
name = "derivative_curiosity_bench"
harness = false
required-features = ["cgsp", "temporal_deriv"]

[[bench]]
name = "micro_belief_bench"
harness = false
required-features = ["micro_belief", "bom_sampling"]
